--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("./scott-webb-ywuH99ygfec-unsplash.jpg");
+    background-image: url("./Terbo-Team.jpg");
     background-color: #ffffff;
 }
 
